--- a/notebook/data_exploration.ipynb
+++ b/notebook/data_exploration.ipynb
@@ -2,19 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# libraries:\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# ML model libraries:\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# libraries for model improvement\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +243,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +609,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +661,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,6 +737,281 @@
     "plt.figure(figsize=(20, 15))\n",
     "sns.heatmap(numeric_data.corr(), annot=True, fmt='.2f')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series([], dtype: int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "missing_values = data.isnull().sum()\n",
+    "print(missing_values[missing_values > 0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le = LabelEncoder()\n",
+    "data['diagnosis'] = le.fit_transform(data['diagnosis'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 'id' column is dropped here as its not a feature for prediction\n",
+    "features = data.drop(['id'], axis=1)\n",
+    "target = features.pop('diagnosis')\n",
+    "\n",
+    "# Scaling features\n",
+    "scaler = StandardScaler()\n",
+    "scaled_features = scaler.fit_transform(features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(scaled_features, target, test_size=0.3, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set shape: (398, 30)\n",
+      "Test set shape: (171, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training set shape: {X_train.shape}\")\n",
+    "print(f\"Test set shape: {X_test.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression\n",
+      "Accuracy: 0.98\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.98      0.99       108\n",
+      "           1       0.97      0.98      0.98        63\n",
+      "\n",
+      "    accuracy                           0.98       171\n",
+      "   macro avg       0.98      0.98      0.98       171\n",
+      "weighted avg       0.98      0.98      0.98       171\n",
+      "\n",
+      "Decision Tree Classifier\n",
+      "Accuracy: 0.92\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.93      0.94       108\n",
+      "           1       0.88      0.92      0.90        63\n",
+      "\n",
+      "    accuracy                           0.92       171\n",
+      "   macro avg       0.92      0.92      0.92       171\n",
+      "weighted avg       0.93      0.92      0.92       171\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Logistic Regression\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.2f}\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# decision Tree\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Decision Tree Classifier\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.2f}\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier\n",
+      "Accuracy: 0.97\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.99      0.98       108\n",
+      "           1       0.98      0.94      0.96        63\n",
+      "\n",
+      "    accuracy                           0.97       171\n",
+      "   macro avg       0.97      0.96      0.97       171\n",
+      "weighted avg       0.97      0.97      0.97       171\n",
+      "\n",
+      "Support Vector Machine (SVM)\n",
+      "Accuracy: 0.97\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.97      0.98       108\n",
+      "           1       0.95      0.97      0.96        63\n",
+      "\n",
+      "    accuracy                           0.97       171\n",
+      "   macro avg       0.97      0.97      0.97       171\n",
+      "weighted avg       0.97      0.97      0.97       171\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Random Forest Classifier\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.2f}\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Support Vector Machine\n",
+    "model = SVC()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Support Vector Machine (SVM)\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.2f}\")\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'logistic__C': 0.1, 'logistic__penalty': 'l2', 'logistic__solver': 'liblinear'}\n",
+      "Best Score: 0.977373417721519\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      1.00       108\n",
+      "           1       1.00      0.98      0.99        63\n",
+      "\n",
+      "    accuracy                           0.99       171\n",
+      "   macro avg       1.00      0.99      0.99       171\n",
+      "weighted avg       0.99      0.99      0.99       171\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[108   0]\n",
+      " [  1  62]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# parameter grid\n",
+    "param_grid = {\n",
+    "    'logistic__C': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+    "    'logistic__penalty': ['l1', 'l2'], \n",
+    "    'logistic__solver': ['liblinear', 'saga']\n",
+    "}\n",
+    "\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    # max_iter a bit too high to resolve converge warnings\n",
+    "    ('logistic', LogisticRegression(max_iter=6000))\n",
+    "])\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=pipeline, param_grid=param_grid, cv=5, scoring='accuracy')\n",
+    "\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "print(f\"Best Parameters: {grid_search.best_params_}\")\n",
+    "print(f\"Best Score: {grid_search.best_score_}\")\n",
+    "\n",
+    "\n",
+    "y_pred = grid_search.best_estimator_.predict(X_test)\n",
+    "\n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation scores: [0.975      0.975      0.9875     0.97468354 0.97468354]\n",
+      "Mean cv Accuracy: 0.9774\n",
+      "Standard deviation of cv accuracy: 0.0051\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cross validation \n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('logistic', LogisticRegression(C=0.1, penalty='l2', solver='liblinear'))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "cv_scores = cross_val_score(pipeline, X_train, y_train, cv=5, scoring='accuracy')\n",
+    "\n",
+    "\n",
+    "print(f\"Cross-validation scores: {cv_scores}\")\n",
+    "print(f\"Mean cv Accuracy: {cv_scores.mean():.4f}\")\n",
+    "print(f\"Standard deviation of cv accuracy: {cv_scores.std():.4f}\")\n"
    ]
   }
  ],
