removed unnecassary stuff

--- a/notebook/data_exploration.ipynb
+++ b/notebook/data_exploration.ipynb
@@ -255,6 +255,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data procesing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -999,7 +1006,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# validation"
+    "## validation"
    ]
   },
   {
@@ -1120,7 +1127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# feature importance"
+    "## feature importance"
    ]
   },
   {
