additional changes and explanation markdown

--- a/notebook/data_exploration.ipynb
+++ b/notebook/data_exploration.ipynb
@@ -27,7 +27,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -1044,6 +1046,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ROC Curve\n",
+    "ROC stands for Receiver Operating Characteristic. The ROC curve is a graphical representation of a classifier's performance across different threshold values. It plots:\n",
+    "\n",
+    "True Positive Rate (TPR) on the y-axis, also known as Sensitivity or Recall.\n",
+    "False Positive Rate (FPR) on the x-axis.\n",
+    "The ROC curve shows the trade-off between TPR and FPR as the decision threshold of the classifier is varied.\n",
+    "\n",
+    "AUC\n",
+    "AUC stands for Area Under the Curve. It quantifies the overall performance of the model by calculating the area under the ROC curve.\n",
+    "\n",
+    "AUC ranges from 0 to 1.\n",
+    "AUC = 1: Perfect model; it perfectly distinguishes between the positive and negative classes.\n",
+    "AUC = 0.5: No discrimination; the model performs no better than random guessing.\n",
+    "AUC < 0.5: Worse than random guessing; this typically indicates a problem with the model or data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -1068,12 +1090,12 @@
    ],
    "source": [
     "from sklearn.metrics import roc_auc_score, roc_curve\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "pipeline.fit(X_train, y_train)\n",
     "\n",
     "# probabilities for the test set\n",
     "y_probs = pipeline.predict_proba(X_test)[:, 1]\n",
+    "\n",
     "\n",
     "# calculating ROC-AUC\n",
     "roc_auc = roc_auc_score(y_test, y_probs)\n",
@@ -1255,8 +1277,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "## sorting features\n",
     "feature_importance_sorted = filtered_features.sort_values(by='Coefficient', ascending=False)\n",
     "\n",
